--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ project(GameEngine)
 set(CMAKE_CXX_STANDARD 20)
 
 # add source files
-file(GLOB_RECURSE SOURCES "Src/Platform/*.cpp" "Src/GameLayer/*.cpp")
+file(GLOB_RECURSE SOURCES "Src/Platform/*.cpp" "Src/GameLayer/*.cpp", "Src/Editor/*.cpp")
 
 add_executable(GameEngine ${SOURCES})
 
@@ -22,13 +22,13 @@ target_compile_definitions(GameEngine PUBLIC RESOURCES_PATH="${CMAKE_CURRENT_SOU
 
 target_compile_options(GameEngine PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow)
 
-
-# uncomment this line to remove the imgui docking
-#add_compile_definitions(REMOVE_IMGUI)
+#uncomment to disable the editor
+#add_compile_definitions(HC_EDITOR)
 
 #add the include directory to the project
 target_include_directories(GameEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include/GameLayer)
 target_include_directories(GameEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include/Platform)
+target_include_directories(GameEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include/Editor)
 
 #add the third party libraries to the project
 target_link_libraries(GameEngine imgui glad glfw stb_image stb_truetype glm)
