Feat: Added logging library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,20 +8,21 @@ add_subdirectory(Thirdparty/stb_truetype)		#loading ttf files
 add_subdirectory(Thirdparty/glm)				#math
 add_subdirectory(Thirdparty/imgui-docking)		#gui
 add_subdirectory(Thirdparty/json-3.11.3)		#json
+add_subdirectory(Thirdparty/spdlog-1.15.1)				#entity component system
 
 project(GameEngine)
 
 set(CMAKE_CXX_STANDARD 20)
 
 # add source files
-file(GLOB_RECURSE SOURCES "Src/Platform/*.cpp" "Src/GameLayer/*.cpp", "Src/Editor/*.cpp")
+file(GLOB_RECURSE SOURCES "Src/Platform/*.cpp" "Src/GameLayer/*.cpp", "Src/Editor/*.cpp" "Src/HCLogs/*.cpp")
 
 add_executable(GameEngine ${SOURCES})
 
 #create a resources path for the project
 target_compile_definitions(GameEngine PUBLIC RESOURCES_PATH="${CMAKE_CURRENT_SOURCE_DIR}/Resources")
 
-#target_compile_options(GameEngine PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow)
+target_compile_options(GameEngine PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow)
 
 #comment to disable the editor
 
@@ -35,8 +36,9 @@ add_compile_definitions(HC_EDITOR)
 target_include_directories(GameEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include/GameLayer)
 target_include_directories(GameEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include/Platform)
 target_include_directories(GameEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include/Editor)
+target_include_directories(GameEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include/HCLogs)
 
 #add the third party libraries to the project
-target_link_libraries(GameEngine imgui glad glfw stb_image stb_truetype glm nlohmann_json::nlohmann_json)
+target_link_libraries(GameEngine imgui glad glfw stb_image stb_truetype glm nlohmann_json::nlohmann_json spdlog)
 
 
