Feat: Add uniform buffer support, basic light implementation and new inspector properties

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,137 @@ obj/
 # Ignore les fichiers spécifiques à certains systèmes
 .DS_Store
 Thumbs.db
+/cmake-build-debug/.ninja_deps
+/cmake-build-debug/.ninja_log
+/cmake-build-debug/build.ninja
+/cmake-build-debug-visual-studio/build.ninja
+/cmake-build-debug/.cmake/api/v1/query/cache-v2
+/cmake-build-debug-visual-studio/.cmake/api/v1/query/cache-v2
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-1673593b93811c777492.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/cache-v2-212767556a03e4482039.json
+/cmake-build-debug/ThirdParty/glfw-3.3.2/cmake_uninstall.cmake
+/cmake-build-debug-visual-studio/ThirdParty/glfw-3.3.2/cmake_uninstall.cmake
+/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+/cmake-build-debug-visual-studio/.cmake/api/v1/query/cmakeFiles-v1
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/cmakeFiles-v1-1f729756464cb87e67da.json
+/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-acb0acd46c8fc083d92d.json
+/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+/cmake-build-debug-visual-studio/.cmake/api/v1/query/codemodel-v2
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/codemodel-v2-222b02fdfa8d0a7394e3.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.glad-Debug-fb25b64953c362e9ccfe.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.glad-Debug-fb25b64953c362e9ccfe.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.glfw-3.3.2.examples-Debug-d9e0d205b4ba49fe1d95.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.glfw-3.3.2.examples-Debug-d9e0d205b4ba49fe1d95.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.glfw-3.3.2.src-Debug-75faf4d9a9485662fc40.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.glfw-3.3.2.src-Debug-e845656e77c36fd31e45.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.glfw-3.3.2.tests-Debug-65fb400708afbe521e24.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.glfw-3.3.2.tests-Debug-65fb400708afbe521e24.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.glfw-3.3.2-Debug-051cc696c2f2c55168bb.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.glfw-3.3.2-Debug-929b7ce8db72a8b020ed.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.glm-Debug-fe5c65793b2b7eb1175e.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.glm-Debug-fe5c65793b2b7eb1175e.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.imgui-docking-Debug-3c929616adf211aacf4c.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.imgui-docking-Debug-3c929616adf211aacf4c.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.json-3.11.3-Debug-c810ae68a59a4505c7ed.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.json-3.11.3-Debug-c810ae68a59a4505c7ed.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.spdlog-1.15.1-Debug-daf05512d154c5c4f3b4.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.spdlog-1.15.1-Debug-daf05512d154c5c4f3b4.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.stb_image-Debug-61eaa7887975fee79b4c.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.stb_image-Debug-61eaa7887975fee79b4c.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-ThirdParty.stb_truetype-Debug-0488987a9efd99a2400c.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/directory-ThirdParty.stb_truetype-Debug-0488987a9efd99a2400c.json
+/cmake-build-debug/ThirdParty/glfw-3.3.2/src/glfw3.pc
+/cmake-build-debug-visual-studio/ThirdParty/glfw-3.3.2/src/glfw3.pc
+/cmake-build-debug/ThirdParty/glfw-3.3.2/src/glfw3Config.cmake
+/cmake-build-debug-visual-studio/ThirdParty/glfw-3.3.2/src/glfw3Config.cmake
+/cmake-build-debug/ThirdParty/glfw-3.3.2/src/glfw3ConfigVersion.cmake
+/cmake-build-debug-visual-studio/ThirdParty/glfw-3.3.2/src/glfw3ConfigVersion.cmake
+/cmake-build-debug/ThirdParty/glfw-3.3.2/src/glfw_config.h
+/cmake-build-debug-visual-studio/ThirdParty/glfw-3.3.2/src/glfw_config.h
+/cmake-build-debug/imgui.ini
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/index-2025-03-08T22-43-48-0505.json
+/cmake-build-debug/ThirdParty/json-3.11.3/nlohmann_json.pc
+/cmake-build-debug-visual-studio/ThirdParty/json-3.11.3/nlohmann_json.pc
+/cmake-build-debug/ThirdParty/json-3.11.3/nlohmann_jsonConfig.cmake
+/cmake-build-debug-visual-studio/ThirdParty/json-3.11.3/nlohmann_jsonConfig.cmake
+/cmake-build-debug/ThirdParty/json-3.11.3/nlohmann_jsonConfigVersion.cmake
+/cmake-build-debug-visual-studio/ThirdParty/json-3.11.3/nlohmann_jsonConfigVersion.cmake
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-boing-Debug-4bb4f29f28b1c465feb7.json
+/cmake-build-debug/.cmake/api/v1/reply/target-boing-Debug-202420bc90edb9c20e09.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-clipboard-Debug-9b469a025f0f20cfff07.json
+/cmake-build-debug/.cmake/api/v1/reply/target-clipboard-Debug-91e2b06ee9995e356a83.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-cursor-Debug-100107c4b49910e0de6e.json
+/cmake-build-debug/.cmake/api/v1/reply/target-cursor-Debug-4283122a6cb368126f73.json
+/cmake-build-debug/.cmake/api/v1/reply/target-empty-Debug-7bb553d52729e0474528.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-empty-Debug-012600294ea67f18a625.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-events-Debug-34bd9891144bf9d330f4.json
+/cmake-build-debug/.cmake/api/v1/reply/target-events-Debug-b828e330878d351d0c3e.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-GameEngine-Debug-4899791409c8152b2c95.json
+/cmake-build-debug/.cmake/api/v1/reply/target-gamma-Debug-1c8f8543ffe7ee05daa6.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-gamma-Debug-dab4dedc9dd2b1c9695e.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-gears-Debug-5ce4fd54f5ff44f37d97.json
+/cmake-build-debug/.cmake/api/v1/reply/target-gears-Debug-29fbb1aa4f94a59d5236.json
+/cmake-build-debug/.cmake/api/v1/reply/target-glad-Debug-83f63688b607a3a76233.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-glad-Debug-f4145100a133e6f32423.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-glfw-Debug-9f2f81ab002e33751a51.json
+/cmake-build-debug/.cmake/api/v1/reply/target-glfw-Debug-fcc7955a46f66e3bc35a.json
+/cmake-build-debug/.cmake/api/v1/reply/target-glfwinfo-Debug-5bb01383fe636e0c673d.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-glfwinfo-Debug-7c650fcf68f12f017570.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-heightmap-Debug-1ed8a933b63918cce99a.json
+/cmake-build-debug/.cmake/api/v1/reply/target-heightmap-Debug-97f383c9547a8ad6785c.json
+/cmake-build-debug/.cmake/api/v1/reply/target-icon-Debug-23df6f709de26b0b3dc4.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-icon-Debug-120d7c6e126769525aaa.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-iconify-Debug-80f150f9fe0a4b5501e7.json
+/cmake-build-debug/.cmake/api/v1/reply/target-iconify-Debug-bb9058f00e317986d26f.json
+/cmake-build-debug/.cmake/api/v1/reply/target-imgui-Debug-60486dd5205476288e21.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-imgui-Debug-bff46375c7ee6b2aeaa2.json
+/cmake-build-debug/.cmake/api/v1/reply/target-inputlag-Debug-3d3fc5726f253110195e.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-inputlag-Debug-147156c94a59059483e3.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-joysticks-Debug-804f820be3e130b886a8.json
+/cmake-build-debug/.cmake/api/v1/reply/target-joysticks-Debug-499296383a97eba7b850.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-monitors-Debug-984bb19b1f154cb00d57.json
+/cmake-build-debug/.cmake/api/v1/reply/target-monitors-Debug-047609b6c3d21499914f.json
+/cmake-build-debug/.cmake/api/v1/reply/target-msaa-Debug-0ac69097d4ea46af462c.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-msaa-Debug-fd6003d11c4385ef8730.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-offscreen-Debug-96521ed9a4737aab1d6f.json
+/cmake-build-debug/.cmake/api/v1/reply/target-offscreen-Debug-f10a83f7851b7d7a0afa.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-opacity-Debug-0ec8d367a423cfebd4d7.json
+/cmake-build-debug/.cmake/api/v1/reply/target-opacity-Debug-6dbfbf91c426d685147e.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-particles-Debug-36e20fae4651eee3d414.json
+/cmake-build-debug/.cmake/api/v1/reply/target-particles-Debug-aa138228c097f5488c64.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-reopen-Debug-d7bef0b96690528349e0.json
+/cmake-build-debug/.cmake/api/v1/reply/target-reopen-Debug-ed756b9b911efc2bbf4c.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-sharing-Debug-aff8c775286f1c2b1e69.json
+/cmake-build-debug/.cmake/api/v1/reply/target-sharing-Debug-bdf7962cb560a4427356.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-simple-Debug-5744081a6d6dab1043e9.json
+/cmake-build-debug/.cmake/api/v1/reply/target-simple-Debug-cc06b83c38914f90f735.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-spdlog-Debug-19b74a3c5fa2946c925f.json
+/cmake-build-debug/.cmake/api/v1/reply/target-spdlog-Debug-602a48b486058184402d.json
+/cmake-build-debug/.cmake/api/v1/reply/target-splitview-Debug-2b4a7c5fef8993302185.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-splitview-Debug-718f0176641746af2ed1.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-stb_image-Debug-3dac993933111937d57f.json
+/cmake-build-debug/.cmake/api/v1/reply/target-stb_image-Debug-95461775dc6075e46581.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-stb_truetype-Debug-6cb623ac1e5ec6d4a5c2.json
+/cmake-build-debug/.cmake/api/v1/reply/target-stb_truetype-Debug-6211edfd45a483746144.json
+/cmake-build-debug/.cmake/api/v1/reply/target-tearing-Debug-447d6118a0b9e3874362.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-tearing-Debug-ad42fc24040af9042326.json
+/cmake-build-debug/.cmake/api/v1/reply/target-threads-Debug-1b643e4a9c9aefe9d81a.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-threads-Debug-81a0c41ca90d98f24f78.json
+/cmake-build-debug/.cmake/api/v1/reply/target-timeout-Debug-5bc853d098e526e1fa52.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-timeout-Debug-db3617999bfcc32bef63.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-title-Debug-bfead5bd665d87f239fe.json
+/cmake-build-debug/.cmake/api/v1/reply/target-title-Debug-f7526509bfbe9e337626.json
+/cmake-build-debug/.cmake/api/v1/reply/target-triangle-vulkan-Debug-8ffc8b3756559dd8ac71.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-triangle-vulkan-Debug-d7d0db323901e4b9ecea.json
+/cmake-build-debug/.cmake/api/v1/reply/target-uninstall-Debug-826d130efcfefcbe7ee3.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-uninstall-Debug-dd02ada6a644e54cdd71.json
+/cmake-build-debug/.cmake/api/v1/reply/target-wave-Debug-14409667eb59e3926b93.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-wave-Debug-afa87db52f921c39fef1.json
+/cmake-build-debug/.cmake/api/v1/reply/target-windows-Debug-5aa8295a9da9edcd1a27.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/target-windows-Debug-1129cd48f584f4057ac9.json
+/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+/cmake-build-debug-visual-studio/.cmake/api/v1/query/toolchains-v1
+/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-1d4913c81f2f538b18c4.json
+/cmake-build-debug-visual-studio/.cmake/api/v1/reply/toolchains-v1-33e2246963a2b8acca6e.json
